--- a/src/App.css
+++ b/src/App.css
@@ -47,12 +47,12 @@
 .card-info{
   display:grid;
   grid-template-columns: 4fr 1fr;
+  padding-left: 50px;
 }
 .card-container{
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 45px;
-
 }
 
 
@@ -61,13 +61,20 @@
   width:100%;
 }
 .order-container{
-  margin-left: 20px;
+ padding-left: 20px;
+  background-color: aqua;
+  background-repeat: no-repeat;
+}
+.order-info{
+  position: sticky;
+  top: 0;
 }
 .btn-select{
   padding: 10px;
   border: 1px solid gray;
   border-radius: 5px;
-  background-color: aqua;
+  background-color: green;
+  color: white;
   margin: 10px 0;
   cursor: pointer;
 }
@@ -95,5 +102,6 @@
 .card-info{
   display:grid;
   grid-template-columns: 1fr;
+  padding-left: 0;
 }
 };
