--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -1,9 +1,9 @@
-.product{
+.product-container{
+    position: relative ;
     width: 300px;
     height: 400px;
     border: 1px solid gray;
     border-radius: 8px;
-    position: relative;
 }
 .product img{
     border-radius: 8px;
@@ -14,6 +14,7 @@
 }
 .btn-cart{
     width: 100%;
+    box-sizing: border-box;
     padding: 12px;
     background-color: aqua;
     border: none;
